Fixed z-index

--- a/styles.less
+++ b/styles.less
@@ -418,7 +418,7 @@ main {
         position: fixed;
         overflow: hidden;
         height: 56px;
-        z-index: 2;
+        z-index: 20;
         .big-avatar {
             display: none;
         }
